// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBasketAnalytics data returns simo product analytic data 1`] = `
Object {
  "eventsConfig": Object {
    "basketPage": Object {
      "basketUpdateFailed": [Function],
      "basketUpdateSuccess": [Function],
      "changePackageCta": [Function],
      "continueShoppingCta": [Function],
      "ctaErrConcurrentLoans": [Function],
      "ctaErrMaxLendingLimit": [Function],
      "ctaErrMaxLoans": [Function],
      "ctaErrRepaymentIssues": [Function],
      "dataSpeed10Mbps": [Function],
      "dataSpeed2Mbps": [Function],
      "dataSpeedFastest": [Function],
      "emptyBasketCta": [Function],
      "inlineComponentError": [Function],
      "pageError": [Function],
      "pageLoad": [Function],
      "removeAddonCta": [Function],
      "removePackageCta": [Function],
      "removeTradeinCta": [Function],
      "seeFinanceBreakdownHandset": [Function],
      "seeFinanceBreakdownWatch": [Function],
      "seeMoreTradeinCta": [Function],
      "switchNetworkFailed": [Function],
      "switchNetworkStart": [Function],
      "switchNetworkSuccess": [Function],
      "undoRemoveAddonCta": [Function],
      "undoRemovePackageCta": [Function],
      "undoRemoveTradeinCta": [Function],
      "updateBasketView": [Function],
      "whatIsAneSimCTA": [Function],
    },
  },
  "pageConfig": Object {
    "cartId": "8d78b144-163c-45bf-8a4d-dd80841940db",
    "pageError": undefined,
    "pageSubSubSection": "basket full",
    "purchaseType": "acquisition",
    "transactionCouponCode": undefined,
    "visitorCustomerType": "consumer",
    "visitorIdAssetActive": undefined,
  },
}
`;

exports[`getBasketAnalytics data returns simo product analytic data if accountCategory is business 1`] = `
Object {
  "eventsConfig": Object {
    "basketPage": Object {
      "basketUpdateFailed": [Function],
      "basketUpdateSuccess": [Function],
      "changePackageCta": [Function],
      "continueShoppingCta": [Function],
      "ctaErrConcurrentLoans": [Function],
      "ctaErrMaxLendingLimit": [Function],
      "ctaErrMaxLoans": [Function],
      "ctaErrRepaymentIssues": [Function],
      "dataSpeed10Mbps": [Function],
      "dataSpeed2Mbps": [Function],
      "dataSpeedFastest": [Function],
      "emptyBasketCta": [Function],
      "inlineComponentError": [Function],
      "pageError": [Function],
      "pageLoad": [Function],
      "removeAddonCta": [Function],
      "removePackageCta": [Function],
      "removeTradeinCta": [Function],
      "seeFinanceBreakdownHandset": [Function],
      "seeFinanceBreakdownWatch": [Function],
      "seeMoreTradeinCta": [Function],
      "switchNetworkFailed": [Function],
      "switchNetworkStart": [Function],
      "switchNetworkSuccess": [Function],
      "undoRemoveAddonCta": [Function],
      "undoRemovePackageCta": [Function],
      "undoRemoveTradeinCta": [Function],
      "updateBasketView": [Function],
      "whatIsAneSimCTA": [Function],
    },
  },
  "pageConfig": Object {
    "cartId": "8d78b144-163c-45bf-8a4d-dd80841940db",
    "pageError": "",
    "pageSubSubSection": "checkout full",
    "purchaseType": "acquisition",
    "transactionCouponCode": undefined,
    "visitorCustomerType": "consumer",
    "visitorIdAssetActive": undefined,
  },
}
`;

exports[`getBasketAnalytics data returns simo product analytic data if in reviewMode 1`] = `
Object {
  "eventsConfig": Object {
    "basketPage": Object {
      "basketUpdateFailed": [Function],
      "basketUpdateSuccess": [Function],
      "changePackageCta": [Function],
      "continueShoppingCta": [Function],
      "ctaErrConcurrentLoans": [Function],
      "ctaErrMaxLendingLimit": [Function],
      "ctaErrMaxLoans": [Function],
      "ctaErrRepaymentIssues": [Function],
      "dataSpeed10Mbps": [Function],
      "dataSpeed2Mbps": [Function],
      "dataSpeedFastest": [Function],
      "emptyBasketCta": [Function],
      "inlineComponentError": [Function],
      "pageError": [Function],
      "pageLoad": [Function],
      "removeAddonCta": [Function],
      "removePackageCta": [Function],
      "removeTradeinCta": [Function],
      "seeFinanceBreakdownHandset": [Function],
      "seeFinanceBreakdownWatch": [Function],
      "seeMoreTradeinCta": [Function],
      "switchNetworkFailed": [Function],
      "switchNetworkStart": [Function],
      "switchNetworkSuccess": [Function],
      "undoRemoveAddonCta": [Function],
      "undoRemovePackageCta": [Function],
      "undoRemoveTradeinCta": [Function],
      "updateBasketView": [Function],
      "whatIsAneSimCTA": [Function],
    },
  },
  "pageConfig": Object {
    "cartId": "8d78b144-163c-45bf-8a4d-dd80841940db",
    "pageError": "",
    "pageSubSubSection": "checkout full",
    "purchaseType": "acquisition",
    "transactionCouponCode": undefined,
    "visitorCustomerType": "consumer",
    "visitorIdAssetActive": undefined,
  },
}
`;

exports[`getBasketAnalytics data returns simo product analytic data with voucher 1`] = `
Object {
  "eventsConfig": Object {
    "basketPage": Object {
      "basketUpdateFailed": [Function],
      "basketUpdateSuccess": [Function],
      "changePackageCta": [Function],
      "continueShoppingCta": [Function],
      "ctaErrConcurrentLoans": [Function],
      "ctaErrMaxLendingLimit": [Function],
      "ctaErrMaxLoans": [Function],
      "ctaErrRepaymentIssues": [Function],
      "dataSpeed10Mbps": [Function],
      "dataSpeed2Mbps": [Function],
      "dataSpeedFastest": [Function],
      "emptyBasketCta": [Function],
      "inlineComponentError": [Function],
      "pageError": [Function],
      "pageLoad": [Function],
      "removeAddonCta": [Function],
      "removePackageCta": [Function],
      "removeTradeinCta": [Function],
      "seeFinanceBreakdownHandset": [Function],
      "seeFinanceBreakdownWatch": [Function],
      "seeMoreTradeinCta": [Function],
      "switchNetworkFailed": [Function],
      "switchNetworkStart": [Function],
      "switchNetworkSuccess": [Function],
      "undoRemoveAddonCta": [Function],
      "undoRemovePackageCta": [Function],
      "undoRemoveTradeinCta": [Function],
      "updateBasketView": [Function],
      "whatIsAneSimCTA": [Function],
    },
  },
  "pageConfig": Object {
    "cartId": "8d78b144-163c-45bf-8a4d-dd80841940db",
    "pageError": undefined,
    "pageSubSubSection": "basket full",
    "purchaseType": "acquisition",
    "transactionCouponCode": "coolbilly10",
    "visitorCustomerType": "consumer",
    "visitorIdAssetActive": undefined,
  },
}
`;

exports[`getBasketAnalytics data tests accessory removeAddonCta method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>remove accessory",
  "eventName": "cart_remove",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [
    "apple",
  ],
  "productCapacity": Array [
    "",
  ],
  "productCategory": Array [
    "accessories",
  ],
  "productColour": Array [
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
  ],
  "productDiscountValue": Array [
    "139",
  ],
  "productDiscountValueNet": Array [
    "115.83",
  ],
  "productId": Array [
    "206299",
  ],
  "productModel": Array [
    "airpods-plus-charging-case",
  ],
  "productName": Array [
    "apple airpods with charging case",
  ],
  "productPackageId": Array [
    "4c18de9b-b41c-4420-8f6f-1655f4e3e9bb",
  ],
  "productPackageName": Array [
    "payg phone and sim package",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
  ],
  "productPlanData": Array [
    "",
  ],
  "productPlanMinutes": Array [
    "",
  ],
  "productPlanSms": Array [
    "",
  ],
  "productPrice": Array [
    "139",
  ],
  "productPriceNet": Array [
    "115.83",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
  ],
  "productQuantity": Array [
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests accessory undoRemoveAddonCta method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>undo remove accessory",
  "eventName": "cart_undo_cart_remove",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [
    "apple",
  ],
  "productCapacity": Array [
    "",
  ],
  "productCategory": Array [
    "accessories",
  ],
  "productColour": Array [
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
  ],
  "productDiscountValue": Array [
    "139",
  ],
  "productDiscountValueNet": Array [
    "115.83",
  ],
  "productId": Array [
    "206299",
  ],
  "productModel": Array [
    "airpods-plus-charging-case",
  ],
  "productName": Array [
    "apple airpods with charging case",
  ],
  "productPackageId": Array [
    "4c18de9b-b41c-4420-8f6f-1655f4e3e9bb",
  ],
  "productPackageName": Array [
    "payg phone and sim package",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
  ],
  "productPlanData": Array [
    "",
  ],
  "productPlanMinutes": Array [
    "",
  ],
  "productPlanSms": Array [
    "",
  ],
  "productPrice": Array [
    "139",
  ],
  "productPriceNet": Array [
    "115.83",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
  ],
  "productQuantity": Array [
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests basketUpdateFailed method 1`] = `
Object {
  "eventAction": "button",
  "eventLabel": "basket>promo code>update basket failed",
  "eventName": "cart_update_failed",
  "pageError": "400",
  "pageType": "basket",
  "productBrand": Array [
    "",
    "",
    "",
  ],
  "productCapacity": Array [
    "",
    "",
    "",
  ],
  "productCategory": Array [
    "sim card",
    "bundle",
    "discount",
  ],
  "productColour": Array [
    "",
    "",
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
    "15",
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
    "12.50",
    "0",
  ],
  "productDiscountValue": Array [
    "0",
    "0",
    "0",
  ],
  "productDiscountValueNet": Array [
    "0",
    "0",
    "0",
  ],
  "productId": Array [
    "086532",
    "112168",
    "109989",
  ],
  "productModel": Array [
    "",
    "",
    "",
  ],
  "productName": Array [
    "blank white triple format sim",
    "24m sim only unlimited max plan",
    "simo limited time discount for 6 months ",
  ],
  "productPackageId": Array [
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
  ],
  "productPackageName": Array [
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
    "",
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
    "24",
    "",
  ],
  "productPlanData": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanMinutes": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanSms": Array [
    "",
    "unlimited",
    "",
  ],
  "productPrice": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceNet": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
    "30",
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
    "25",
    "0",
  ],
  "productQuantity": Array [
    "1",
    "1",
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": "coolbilly10",
}
`;

exports[`getBasketAnalytics data tests basketUpdateSuccess method 1`] = `
Object {
  "eventAction": "button",
  "eventLabel": "basket>promo code>update basket success",
  "eventName": "cart_update_success",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [
    "",
    "",
    "",
  ],
  "productCapacity": Array [
    "",
    "",
    "",
  ],
  "productCategory": Array [
    "sim card",
    "bundle",
    "discount",
  ],
  "productColour": Array [
    "",
    "",
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
    "15",
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
    "12.50",
    "0",
  ],
  "productDiscountValue": Array [
    "0",
    "0",
    "0",
  ],
  "productDiscountValueNet": Array [
    "0",
    "0",
    "0",
  ],
  "productId": Array [
    "086532",
    "112168",
    "109989",
  ],
  "productModel": Array [
    "",
    "",
    "",
  ],
  "productName": Array [
    "blank white triple format sim",
    "24m sim only unlimited max plan",
    "simo limited time discount for 6 months ",
  ],
  "productPackageId": Array [
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
  ],
  "productPackageName": Array [
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
    "",
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
    "24",
    "",
  ],
  "productPlanData": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanMinutes": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanSms": Array [
    "",
    "unlimited",
    "",
  ],
  "productPrice": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceNet": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
    "30",
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
    "25",
    "0",
  ],
  "productQuantity": Array [
    "1",
    "1",
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests changePackageCta method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>change",
  "eventName": "cart_change_package",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests continueShoppingCta method 1`] = `
Object {
  "eventAction": "button",
  "eventLabel": "basket>continue shopping",
  "eventName": "cart_continue_shopping",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [
    "",
    "",
    "",
  ],
  "productCapacity": Array [
    "",
    "",
    "",
  ],
  "productCategory": Array [
    "sim card",
    "bundle",
    "discount",
  ],
  "productColour": Array [
    "",
    "",
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
    "15",
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
    "12.50",
    "0",
  ],
  "productDiscountValue": Array [
    "0",
    "0",
    "0",
  ],
  "productDiscountValueNet": Array [
    "0",
    "0",
    "0",
  ],
  "productId": Array [
    "086532",
    "112168",
    "109989",
  ],
  "productModel": Array [
    "",
    "",
    "",
  ],
  "productName": Array [
    "blank white triple format sim",
    "24m sim only unlimited max plan",
    "simo limited time discount for 6 months ",
  ],
  "productPackageId": Array [
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
  ],
  "productPackageName": Array [
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
    "",
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
    "24",
    "",
  ],
  "productPlanData": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanMinutes": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanSms": Array [
    "",
    "unlimited",
    "",
  ],
  "productPrice": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceNet": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
    "30",
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
    "25",
    "0",
  ],
  "productQuantity": Array [
    "1",
    "1",
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests ctaErrConcurrentLoans method 1`] = `
Object {
  "eventAction": "button",
  "eventLabel": "basket>maximum concurrent loans>payoff device plan",
  "eventName": "maximum_concurrent_loans_payoff_device_plan",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [
    "",
    "",
    "",
  ],
  "productCapacity": Array [
    "",
    "",
    "",
  ],
  "productCategory": Array [
    "sim card",
    "bundle",
    "discount",
  ],
  "productColour": Array [
    "",
    "",
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
    "15",
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
    "12.50",
    "0",
  ],
  "productDiscountValue": Array [
    "0",
    "0",
    "0",
  ],
  "productDiscountValueNet": Array [
    "0",
    "0",
    "0",
  ],
  "productId": Array [
    "086532",
    "112168",
    "109989",
  ],
  "productModel": Array [
    "",
    "",
    "",
  ],
  "productName": Array [
    "blank white triple format sim",
    "24m sim only unlimited max plan",
    "simo limited time discount for 6 months ",
  ],
  "productPackageId": Array [
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
  ],
  "productPackageName": Array [
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
    "",
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
    "24",
    "",
  ],
  "productPlanData": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanMinutes": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanSms": Array [
    "",
    "unlimited",
    "",
  ],
  "productPrice": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceNet": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
    "30",
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
    "25",
    "0",
  ],
  "productQuantity": Array [
    "1",
    "1",
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests ctaErrMaxLendingLimit method 1`] = `
Object {
  "eventAction": "button",
  "eventLabel": "basket>maximum lending limit>payoff device plan",
  "eventName": "maximum_lending_limit_payoff_device_plan",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [
    "",
    "",
    "",
  ],
  "productCapacity": Array [
    "",
    "",
    "",
  ],
  "productCategory": Array [
    "sim card",
    "bundle",
    "discount",
  ],
  "productColour": Array [
    "",
    "",
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
    "15",
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
    "12.50",
    "0",
  ],
  "productDiscountValue": Array [
    "0",
    "0",
    "0",
  ],
  "productDiscountValueNet": Array [
    "0",
    "0",
    "0",
  ],
  "productId": Array [
    "086532",
    "112168",
    "109989",
  ],
  "productModel": Array [
    "",
    "",
    "",
  ],
  "productName": Array [
    "blank white triple format sim",
    "24m sim only unlimited max plan",
    "simo limited time discount for 6 months ",
  ],
  "productPackageId": Array [
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
  ],
  "productPackageName": Array [
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
    "",
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
    "24",
    "",
  ],
  "productPlanData": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanMinutes": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanSms": Array [
    "",
    "unlimited",
    "",
  ],
  "productPrice": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceNet": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
    "30",
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
    "25",
    "0",
  ],
  "productQuantity": Array [
    "1",
    "1",
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests ctaErrMaxLoans method 1`] = `
Object {
  "eventAction": "button",
  "eventLabel": "basket>maximum loans>payoff device plan",
  "eventName": "maximum_loans_payoff_device_plan",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [
    "",
    "",
    "",
  ],
  "productCapacity": Array [
    "",
    "",
    "",
  ],
  "productCategory": Array [
    "sim card",
    "bundle",
    "discount",
  ],
  "productColour": Array [
    "",
    "",
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
    "15",
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
    "12.50",
    "0",
  ],
  "productDiscountValue": Array [
    "0",
    "0",
    "0",
  ],
  "productDiscountValueNet": Array [
    "0",
    "0",
    "0",
  ],
  "productId": Array [
    "086532",
    "112168",
    "109989",
  ],
  "productModel": Array [
    "",
    "",
    "",
  ],
  "productName": Array [
    "blank white triple format sim",
    "24m sim only unlimited max plan",
    "simo limited time discount for 6 months ",
  ],
  "productPackageId": Array [
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
  ],
  "productPackageName": Array [
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
    "",
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
    "24",
    "",
  ],
  "productPlanData": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanMinutes": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanSms": Array [
    "",
    "unlimited",
    "",
  ],
  "productPrice": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceNet": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
    "30",
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
    "25",
    "0",
  ],
  "productQuantity": Array [
    "1",
    "1",
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests ctaErrRepaymentIssues method 1`] = `
Object {
  "eventAction": "button",
  "eventLabel": "basket>repayment issues>log into account",
  "eventName": "repayment_issues_log_into_account",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [
    "",
    "",
    "",
  ],
  "productCapacity": Array [
    "",
    "",
    "",
  ],
  "productCategory": Array [
    "sim card",
    "bundle",
    "discount",
  ],
  "productColour": Array [
    "",
    "",
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
    "15",
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
    "12.50",
    "0",
  ],
  "productDiscountValue": Array [
    "0",
    "0",
    "0",
  ],
  "productDiscountValueNet": Array [
    "0",
    "0",
    "0",
  ],
  "productId": Array [
    "086532",
    "112168",
    "109989",
  ],
  "productModel": Array [
    "",
    "",
    "",
  ],
  "productName": Array [
    "blank white triple format sim",
    "24m sim only unlimited max plan",
    "simo limited time discount for 6 months ",
  ],
  "productPackageId": Array [
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
  ],
  "productPackageName": Array [
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
    "",
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
    "24",
    "",
  ],
  "productPlanData": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanMinutes": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanSms": Array [
    "",
    "unlimited",
    "",
  ],
  "productPrice": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceNet": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
    "30",
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
    "25",
    "0",
  ],
  "productQuantity": Array [
    "1",
    "1",
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests dataSpeed2Mbps method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>speed maximum download>2 mbps",
  "eventName": "cart_speed_maximum_download_2mbps",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests dataSpeed10Mbps method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>speed maximum download>10 mbps",
  "eventName": "cart_speed_maximum_download_10mbps",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests dataSpeedFastest method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>speed maximum download>fastest",
  "eventName": "cart_speed_maximum_download_fastest",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests emptyBasketCta method 1`] = `
Object {
  "eventAction": "button",
  "eventLabel": "basket>empty basket",
  "eventName": "cart_empty",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [
    "",
    "",
    "",
  ],
  "productCapacity": Array [
    "",
    "",
    "",
  ],
  "productCategory": Array [
    "sim card",
    "bundle",
    "discount",
  ],
  "productColour": Array [
    "",
    "",
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
    "15",
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
    "12.50",
    "0",
  ],
  "productDiscountValue": Array [
    "0",
    "0",
    "0",
  ],
  "productDiscountValueNet": Array [
    "0",
    "0",
    "0",
  ],
  "productId": Array [
    "086532",
    "112168",
    "109989",
  ],
  "productModel": Array [
    "",
    "",
    "",
  ],
  "productName": Array [
    "blank white triple format sim",
    "24m sim only unlimited max plan",
    "simo limited time discount for 6 months ",
  ],
  "productPackageId": Array [
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
  ],
  "productPackageName": Array [
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
    "",
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
    "24",
    "",
  ],
  "productPlanData": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanMinutes": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanSms": Array [
    "",
    "unlimited",
    "",
  ],
  "productPrice": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceNet": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
    "30",
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
    "25",
    "0",
  ],
  "productQuantity": Array [
    "1",
    "1",
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests inlineComponentError method 1`] = `
Object {
  "eventAction": "test event action",
  "eventLabel": "test event label",
  "eventName": "inline_component_error",
  "pageError": "test error",
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests pageError method 1`] = `
Object {
  "eventAction": "",
  "eventLabel": "",
  "eventName": Array [
    "cart_view",
    "page_error",
  ],
  "pageError": "test error",
  "pageName": "uk>shop>basket>page error",
  "pageType": "basket",
  "productBrand": Array [
    "",
    "",
    "",
  ],
  "productCapacity": Array [
    "",
    "",
    "",
  ],
  "productCategory": Array [
    "sim card",
    "bundle",
    "discount",
  ],
  "productColour": Array [
    "",
    "",
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
    "15",
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
    "12.50",
    "0",
  ],
  "productDiscountValue": Array [
    "0",
    "0",
    "0",
  ],
  "productDiscountValueNet": Array [
    "0",
    "0",
    "0",
  ],
  "productId": Array [
    "086532",
    "112168",
    "109989",
  ],
  "productModel": Array [
    "",
    "",
    "",
  ],
  "productName": Array [
    "blank white triple format sim",
    "24m sim only unlimited max plan",
    "simo limited time discount for 6 months ",
  ],
  "productPackageId": Array [
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
  ],
  "productPackageName": Array [
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
    "",
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
    "24",
    "",
  ],
  "productPlanData": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanMinutes": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanSms": Array [
    "",
    "unlimited",
    "",
  ],
  "productPrice": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceNet": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
    "30",
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
    "25",
    "0",
  ],
  "productQuantity": Array [
    "1",
    "1",
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests pageLoad method 1`] = `
Object {
  "eventName": "cart_view",
  "pageType": "basket",
  "productBrand": Array [
    "",
    "",
    "",
  ],
  "productCapacity": Array [
    "",
    "",
    "",
  ],
  "productCategory": Array [
    "sim card",
    "bundle",
    "discount",
  ],
  "productColour": Array [
    "",
    "",
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
    "15",
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
    "12.50",
    "0",
  ],
  "productDiscountValue": Array [
    "0",
    "0",
    "0",
  ],
  "productDiscountValueNet": Array [
    "0",
    "0",
    "0",
  ],
  "productId": Array [
    "086532",
    "112168",
    "109989",
  ],
  "productModel": Array [
    "",
    "",
    "",
  ],
  "productName": Array [
    "blank white triple format sim",
    "24m sim only unlimited max plan",
    "simo limited time discount for 6 months ",
  ],
  "productPackageId": Array [
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
  ],
  "productPackageName": Array [
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
    "",
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
    "24",
    "",
  ],
  "productPlanData": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanMinutes": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanSms": Array [
    "",
    "unlimited",
    "",
  ],
  "productPrice": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceNet": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
    "30",
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
    "25",
    "0",
  ],
  "productQuantity": Array [
    "1",
    "1",
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests removeAddonCta method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>remove add on",
  "eventName": "cart_remove",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests removePackageCta method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>remove package",
  "eventName": "cart_remove_package",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests removeTradeinCta method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>remove your trade in",
  "eventName": "cart_remove_trade_in",
  "pageError": "test error",
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests seeFinanceBreakdownHandset method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>see finance breakdown>handset",
  "eventName": "cart_see_finance_breakdown_handset",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests seeFinanceBreakdownWatch method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>see finance breakdown>watch",
  "eventName": "cart_see_finance_breakdown_watch",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests seeMoreTradeinCta method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>see more>trade in",
  "eventName": "cart_see_more_trade_in",
  "pageError": "test error",
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests switchNetworkFailed method 1`] = `
Object {
  "eventAction": "button",
  "eventLabel": "basket>switch network failed",
  "eventName": "cart_switch_network_failed",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": "PAC",
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests switchNetworkStart method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>switch network start",
  "eventName": "cart_switch_network_start",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests switchNetworkSuccess method 1`] = `
Object {
  "eventAction": "button",
  "eventLabel": "basket>switch network applied",
  "eventName": "cart_switch_network_applied",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": "PAC",
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests undoRemoveAddonCta method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>undo remove add on",
  "eventName": "cart_undo_cart_remove",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests undoRemovePackageCta method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>undo remove package",
  "eventName": "cart_undo_remove_package",
  "pageError": undefined,
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests undoRemoveTradeinCta method 1`] = `
Object {
  "eventAction": "text",
  "eventLabel": "basket>undo remove your trade in",
  "eventName": "cart_undo_cart_remove_trade_in",
  "pageError": "test error",
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getBasketAnalytics data tests updateBasketView method 1`] = `
Object {
  "eventAction": "",
  "eventLabel": "",
  "eventName": "cart_contents_updated",
  "pageError": "test error",
  "pageType": "basket",
  "productBrand": Array [],
  "productCapacity": Array [],
  "productCategory": Array [],
  "productColour": Array [],
  "productDiscountRecurrenceAmount": Array [],
  "productDiscountRecurrenceAmountNet": Array [],
  "productDiscountValue": Array [],
  "productDiscountValueNet": Array [],
  "productId": Array [],
  "productModel": Array [],
  "productName": Array [],
  "productPackageId": Array [],
  "productPackageName": Array [],
  "productPackageNetworkSwitchType": Array [],
  "productPackagePlanDuration": Array [],
  "productPlanData": Array [],
  "productPlanMinutes": Array [],
  "productPlanSms": Array [],
  "productPrice": Array [],
  "productPriceNet": Array [],
  "productPriceRecurrenceAmount": Array [],
  "productPriceRecurrenceAmountNet": Array [],
  "productQuantity": Array [],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;
